# devpulse

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 2026_05_20_2219_f5e52e5a7bfc_init_users_orgs_memberships_refresh_.py
backend/app/: __init__.py  api.py  main.py
backend/app/core/: config.py  logging.py
backend/app/db/: __init__.py  base.py  engine.py  health.py  redis.py  session.py  types.py
backend/app/modules/: __init__.py
backend/app/modules/auth/: __init__.py  deps.py  models.py  router.py  schemas.py  security.py  service.py
backend/app/modules/organizations/: __init__.py  models.py  router.py  schemas.py  service.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_orgs.py
backend/tests/unit/: test_security.py
docs/adr/: 0001-monorepo-layout.md  0002-python-dependency-management-uv.md  0003-background-jobs-apscheduler-arq.md  0004-async-db-engine-and-session-pattern.md
infrastructure/docker/postgres/: init.sql
