[project]
name = "devpulse-backend"
version = "0.1.0"
description = "DevPulse — AI-powered engineering operations platform (backend)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "DevPulse" }]

# ----------------------------------------------------------------------------
# Runtime dependencies. Anything imported by `app/`, `workers/`, `mcp_server/`.
# Keep ranges generous; uv.lock pins the actual versions.
# ----------------------------------------------------------------------------
dependencies = [
    # --- Web framework ---
    "fastapi>=0.115,<0.117",
    "uvicorn[standard]>=0.32,<0.34",         # ASGI server with httptools + websockets
    "python-multipart>=0.0.12",              # FastAPI form/file uploads
    # --- Settings & validation ---
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    # --- Database ---
    "sqlalchemy[asyncio]>=2.0.35,<3",
    "asyncpg>=0.29,<0.31",                   # Async Postgres driver
    "alembic>=1.13,<2",
    "pgvector>=0.3.6",                       # pgvector SQLAlchemy types
    # --- Cache / queue ---
    "redis[hiredis]>=5.1,<6",
    "arq>=0.26,<0.27",                       # async Redis-backed job queue
    # --- Scheduling ---
    "apscheduler>=3.10,<4",
    # --- Auth & security ---
    # argon2id via argon2-cffi: OWASP's recommended password hash as of 2024+.
    # Memory-hard, GPU-resistant. We chose this over passlib[bcrypt] because
    # passlib is effectively unmaintained and argon2id is the modern default.
    "argon2-cffi>=23.1,<24",
    "pyjwt>=2.9,<3",                         # JWT encode/decode
    # --- HTTP client (we'll need it for health checks) ---
    "httpx>=0.27,<0.29",
    # --- Observability ---
    "structlog>=24.4,<25",                   # structured JSON logging
    # --- AI ---
    "anthropic>=0.39,<1",
    "mcp>=1.0.0",                            # MCP Python SDK
    "email-validator>=2.1,<3",
]

[project.optional-dependencies]
# Dev tooling. Not installed into prod image.
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=5.0,<6",
    "anyio>=4.6,<5",
    "httpx>=0.27,<0.29",                     # for TestClient async
    "ruff>=0.6.9,<0.7",
    "mypy>=1.11.2,<2",
    "testcontainers[postgres,redis]>=4.8,<5",
    "freezegun>=1.5,<2",                     # for time-based tests
]

# ----------------------------------------------------------------------------
# Build system. `setuptools` is fine; we don't ship this as a wheel publicly.
# uv uses this to install the project in editable mode.
# ----------------------------------------------------------------------------
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

# ============================================================================
# Ruff — lint + format. Replaces flake8, isort, black, pyupgrade, and more.
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
# Curated ruleset. We start strict; loosen with explicit per-line `# noqa`
# comments if a rule genuinely doesn't fit a context.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear (real bug patterns)
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade (modern syntax)
    "N",    # pep8-naming
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins (don't shadow builtins)
    "T20",  # flake8-print (no print()s in committed code)
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "ASYNC",# async-correctness
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # FastAPI uses function calls in defaults (Depends(), Query())
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]   # asserts are fine in tests
"alembic/env.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ============================================================================
# Mypy — strict from day one. Future-you will thank present-you.
# ============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/", "tests/"]
# Strict but with one pragmatic loosening:
disallow_untyped_decorators = false  # FastAPI's decorators don't carry types well

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true

# ============================================================================
# Pytest
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = [
    "-ra",                  # show summary of all non-passing
    "--strict-markers",     # fail on unknown @pytest.mark.foo
    "--strict-config",
    "-vv",
]
markers = [
    "integration: requires Postgres/Redis (slower)",
    "e2e: full-stack end-to-end",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
